# Callbackable-Sentence-Transformers

./: LICENSE  __init__.py  pyproject.toml  requirements.txt
src/callbackable_sentence_transformers/: callbackable_sentence_transformers.py
src/sentence_transformers_train_callable.egg-info/: SOURCES.txt
