[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentence-transformers-train-callable"
version = "2024.0.0"
dependencies = [
    "sentence_transformers",
    "torch"
]
requires-python = ">=3.8"
authors = [
  {name = "Cyrille Siouffi", email = "cyrille.siouffi@protonmail.com"}
]
maintainers = [
  {name = "Cyrille Siouffi", email = "cyrille.siouffi@protonmail.com"}
]
description = "A simple package to add a new parameter for the SentenceTransformer class"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["sentence_transformers", "train", "log"]
classifiers = [
  "Programming Language :: Python"
]